# flight-delays

./: .gitignore  .ruff.toml  README.md  Taskfile.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: implement.agent.md  plan.agent.md  refine.agent.md
.github/hooks/: pre-commit.sh
.github/instructions/: python.instructions.md  test.instructions.md
.github/skills/code-quality-and-testing/: SKILL.md
.github/skills/handoff-writing/: SKILL.md
.github/skills/handoff-writing/templates/: implement-handoff.md  plan-handoff.md  refine-handoff.md
docs/: CODING_GUIDELINES.md  PROJECT_OVERVIEW.md
src/flight_delays_server/: __init__.py  exceptions.py
src/flight_delays_server/models/: __init__.py  health.py
src/flight_delays_server/routers/: __init__.py  health.py  main.py
tests/: conftest.py  test_app.py
